<?xml version="1.0" encoding="utf-8"?>

<!--
   //Ramesh Narayan Gaire N01452430, ONA
    //Roshan Shrestha N01457532, ONA
    // Rushi Bhandari N01464259, ONA
    // Komal Bamotra N01426087,ONA
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:gravity="center_horizontal"
            android:layout_marginVertical="16dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"

                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Login"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet"
            android:textSize="16sp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tvRegisterHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register_here"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="100dp"
            android:text="@string/or_sign_in_with"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/googleID"
            android:layout_width="112dp"
            android:layout_height="87dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/googlelogo" />


    </LinearLayout>
</LinearLayout>